--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -59,7 +59,10 @@
 		<link
 		rel="stylesheet" href="{{asset('assets/css/jquery.datetimepicker.min.css')}}">
 		<!-- Theme Custom CSS -->
-		<link rel="stylesheet" href="{{asset('assets/css/style.css')}}"> {% block stylesheets %}{% endblock %}
+		<link rel="stylesheet" href="{{asset('assets/css/style.css')}}">
+		{% block addstylesheets %}
+
+		{% endblock %}
 
 		{% block javascripts %}
 			{% block importmap %}
@@ -534,7 +537,7 @@
 		</svg>
 	</div>
 
-	{% block addJavascripts %}
+	{% block Javascriptslinks %}
 		<!--==============================
 										    All Js File
 										============================== -->
@@ -558,6 +561,10 @@
 		<!-- Main Js File -->
 		<script src="{{asset('assets/js/main.js')}}"></script>
 
+	{% endblock %}
+	{% block addJavascript %}
+	
+	
 	{% endblock %}
 </html>
 
